Done for now dun dun dunnnnnnnn

--- a/About.html
+++ b/About.html
@@ -36,5 +36,14 @@
 
     <div id="AddyPart" class="Addy">
         <header>Meet the Creator PT.2</header>
-        <p></p>
+        <p>
+            Allow me to introduce Addy, a vibrant and outgoing 16-year-old hailing from the picturesque state of Michigan. 
+            With an infectious enthusiasm for technology, Addy immerses themselves in the captivating realms of video games, 
+            robotics, and web design. As a junior in high school, Addy has already achieved a remarkable certification in HTML 
+            and CSS, showcasing a natural aptitude for web development. Beyond the digital landscape, this outgoing individual 
+            thrives on social interactions, making friends easily and bringing positive energy to any environment. 
+            A creative problem-solver at heart, Addy seamlessly navigates the dynamic intersection of gaming, robotics, and web design. 
+            With a promising journey ahead, Addy's blend of youthful curiosity, tech-savvy prowess, and outgoing nature make them a 
+            standout presence in both the digital and real-world spheres.
+        </p>
        
