--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <Header><h1 class="heading">What the Michigan?</h1></Header>
     <nav>
         <a href="">The List</a>
-        <a href="">About us</a>
+        <a href="/About.html">About us</a>
         <a href="">Menu</a>
         <a href="">10/10</a>
     </nav>
