--- a/About.html
+++ b/About.html
@@ -13,7 +13,7 @@
         <h1>About Page</h1>
         <nav>
             <ul>
-                <li><a href="/main.html">Home</a></li>
+                <li><a href="/index.html">Home</a></li>
                 <li><a href="/About.html">About</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
