--- a/pages/About.html
+++ b/pages/About.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Page</title>
-    <link rel="stylesheet" href="styles/Aboutcss.css">
+    <link rel="stylesheet" href="/styles/Aboutcss.css">
 </head>
 
 <body>
@@ -13,7 +13,7 @@
         <h1>About Page</h1>
         <nav>
             <ul>
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="/About.html">About</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
