--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
     <Header><h1 class="heading">What the Michigan?</h1></Header>
     <nav>
-        <a href="./pages/thelist.html">Restaurants</a>
-        <a href="">Activities</a>
+        <a href="./pages/resturants.html">Restaurants</a>
+        <a href="./pages/activities.html">Activities</a>
         <a href="">10/10</a>
         <a href="./pages/About.html">About us</a>
     </nav>
 
-    <img src="./pics/25000418_7000503.png" alt="The Logo, made by Zoe Sample">
+    <img src="./pics/Logo.png" alt="The Logo, made by Zoe Sample">
 
 </body
 
